--- a/demopy.ipynb
+++ b/demopy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c2ad399a",
    "metadata": {},
    "outputs": [
@@ -20,8 +20,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "05af755d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey Gorgeous!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hey Gorgeous!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35aac8e4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -43,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
